--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
   height: 100%;
   width: 100%;
-  background-color: rgb(0,0,0);
+  background-color: rgb(255, 0, 0);
   box-shadow: 0px 3px 30px #000000aa inset;
   touch-action: none;
   -webkit-touch-callout: none;
